--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <body>
     <head>
         <title>Волейбол</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <header>
         
